--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ionic/react": "^7.5.7",
     "flowbite-react": "^0.7.0",
     "primereact": "^10.1.1",
     "react": "^18.2.0",
